--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
@@ -30,11 +30,10 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.minimum)
+            Type
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.minimum)
-            @Html.ValidationMessageFor(model => model.minimum)
+        <div>
+            @Html.RenderPartial("List", "AttributeTypeController")
         </div>
 
         <p>
