--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DaemonCharacter.Models.AttributeType
+﻿@model DaemonCharacter.Models.AttributeTypeClass
 
 @{
     ViewBag.Title = "Details";
