--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Models.AttributeType>
+﻿@model IEnumerable<DaemonCharacter.Models.AttributeTypeClass>
 
 @{
     ViewBag.Title = "Index";
