--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Create.cshtml
@@ -47,7 +47,7 @@
     </fieldset>
 }
 <div style="color:red">
-    @ViewBag.Retorno
+    @ViewBag.message
 </div>
 <div>
     @Html.ActionLink("Back to List", "Index")
