--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
@@ -17,6 +17,6 @@
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.id }) |
+    @Html.ActionLink("Edit", "Edit", new { idAttributeType = Model.idAttributeType }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
