--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Index.cshtml
@@ -23,9 +23,9 @@
             @Html.DisplayFor(modelItem => item.name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Edit", "Edit", new { idAttributeType = item.idAttributeType }) |
+            @Html.ActionLink("Details", "Details", new { idAttributeType = item.idAttributeType }) |
+            @Html.ActionLink("Delete", "Delete", new { idAttributeType = item.idAttributeType })
         </td>
     </tr>
 }
