--- a/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
@@ -13,7 +13,7 @@
     <fieldset>
         <legend>CharacterClass</legend>
 
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.idCharacter)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
