--- a/DaemonCharacter/DaemonCharacter/Content/Site.css
+++ b/DaemonCharacter/DaemonCharacter/Content/Site.css
@@ -95,7 +95,7 @@ h5, h6 {
 ----------------------------------------------------------*/
 .content-wrapper {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 95%;
 }
 
 #body {
@@ -306,7 +306,7 @@ ol.round {
 /* content */
 article {
     float: left;
-    width: 70%;
+    width: 95%;
 }
 
 aside {
@@ -431,12 +431,12 @@ input, textarea {
     font-size: 1.2em;
     margin: 5px 0 6px 0;
     padding: 5px;
-    width: 300px;
+    max-width: 300px;
 }
 
 textarea {
     font-family: inherit;
-    width: 500px;
+    max-width: 500px;
 }
 
     input:focus, textarea:focus {
