--- a/DaemonCharacter/DaemonCharacter/Content/DynamicForm.css
+++ b/DaemonCharacter/DaemonCharacter/Content/DynamicForm.css
@@ -169,7 +169,7 @@ div.dynamicAttribute {
 }
 
 #dynamic-side-right {
-    margin-left: 15px;
+    margin: 5px;
     padding: 5px;
     border: 1px solid #808080;
     border-radius: 10px;
@@ -209,7 +209,7 @@ div.dynamicAttribute {
     border-radius: 10px;
 }*/
 .messages {
-    color: red;
+    color: black;
 }
 
 .button {
