--- a/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
@@ -26,6 +26,9 @@
         <p>
             <input type="submit" value="Save" />
         </p>
+        <p class="messages">
+            @ViewBag.Message
+        </p>
     </fieldset>
 }
 
