--- a/DaemonCharacter/DaemonCharacter/Content/DynamicForm.css
+++ b/DaemonCharacter/DaemonCharacter/Content/DynamicForm.css
@@ -222,7 +222,26 @@ fieldset legend {
     background-color: darkgrey;
 }
 
-checkbox{
-    border-radius:10px;
-    font-size:large;
+checkbox {
+    border-radius: 10px;
+    font-size: large;
+}
+
+.dynamic-input-detail {
+    max-width: 50px;
+    font-size: small;
+    border-radius: 10px;
+}
+
+#aside-character-form {
+    float: right;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px #888888;
+    padding:10px;
+    width:500px;
+    overflow:auto;
+    overflow-x:no-display;
+    overflow-y:auto;
+    max-height:350px;
 }
