--- a/DaemonCharacter/DaemonCharacter/Views/Character/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Details.cshtml
@@ -11,8 +11,8 @@
 </head>
 <h2>@Html.DisplayFor(model => model.name)</h2>
 <br />
-<aside id="aside-character-form">
-    @{Html.RenderAction("ListCharacter", "CharacterAttribute", new { Model.idCharacter });}
+<aside id="aside-character-form-right">
+    @{Html.RenderAction("ListCharacterWithBonus", "CharacterAttribute", new { Model.idCharacter });}
 </aside>
 <table cellpadding="0" cellspacing="0" border="1">
     <tr>
@@ -39,4 +39,6 @@
         <td>@Html.DisplayFor(model => model.experience)</td>
     </tr>
 </table>
-
+<aside id="aside-character-form-left">
+    @{Html.RenderAction("ListCharacterWithNoBonus", "CharacterAttribute", new { Model.idCharacter });}
+</aside>
