--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Delete.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Delete.cshtml
@@ -1,4 +1,12 @@
-﻿@model DaemonCharacter.Models.AttributeClass
+﻿@if (!Request.IsAuthenticated)
+{
+    <script type="text/javascript">
+        window.location.href = '@Url.Action("Index","Home")';
+    </script>
+}
+
+
+@model DaemonCharacter.Models.AttributeClass
 
 @{
     ViewBag.Title = "Delete";
