--- a/DaemonCharacter/DaemonCharacter/Content/Menu.css
+++ b/DaemonCharacter/DaemonCharacter/Content/Menu.css
@@ -1,77 +1,104 @@
-﻿#site-menu {
-    display: block;
-    overflow: hidden;
-    top:0;
-    width:100%;
-
-    padding-left: 20px;
-    margin-bottom:15px;   
-
-    background-color: goldenrod;
-    border-bottom:1px dashed black;
+﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,300);
+@charset "UTF-8";
+/* Base Styles */
+#cssmenu,
+#cssmenu ul,
+#cssmenu li,
+#cssmenu a {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
+  font-weight: normal;
+  text-decoration: none;
+  line-height: 1;
+  font-family: 'Open Sans', sans-serif;
+  font-size: small;
+  position: relative;
 }
-
-    nav ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-
-        nav ul li {
-            margin: 0;
-            display: inline-block;
-            list-style-type: none;
-            transition: all 0.9s;
-        }
-
-    nav > ul > li > a {
-        color: #aaa;
-        display: block;
-        line-height: 2em;
-        padding: 0.5em 2em;
-        text-decoration: none;
-    }
-
-    nav li > ul {
-        display: none;
-        margin-top: 0px;
-        background-color: #bbb;
-        border-radius:5px;
-    }
-
-        nav li > ul li {
-            display: block;
-        }
-
-            nav li > ul li a {
-                color: #111;
-                display: block;
-                line-height: 2em;
-                padding: 0.5em 2em;
-                text-decoration: none;
-            }
-
-    nav li:hover {
-        background-color: #666;
-        border-radius:5px;
-    }
-
-        nav li:hover > ul {
-            position: absolute;
-            display: block;
-            border-radius:5px;
-        }
-
-    nav li > ul > li ul {
-        display: none;
-        background-color: #888;
-        border-radius:5px;
-    }
-
-    nav li > ul > li:hover > ul {
-        position: absolute;
-        display: block;
-        margin-left: 100%;
-        margin-top: -3em;
-        border-radius:5px;
-    }
+#cssmenu a {
+  line-height: 1.3;
+}
+#cssmenu {
+  width:150px;
+  background: #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding:5px;
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+}
+#cssmenu > ul > li {
+  margin: 0 0 2px 0;
+}
+#cssmenu > ul > li:last-child {
+  margin: 0;
+}
+#cssmenu > ul > li > a {
+  font-size: small;
+  display: block;
+  color: #ffffff;
+  text-shadow: 0 1px 1px #000;
+  background: #565656;
+  background: -moz-linear-gradient(#565656 0%, #323232 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #565656), color-stop(100%, #323232));
+  background: -webkit-linear-gradient(#565656 0%, #323232 100%);
+  background: linear-gradient(#565656 0%, #323232 100%);
+  /*border: 1px solid #000;*/
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+#cssmenu > ul > li > a > span {
+  display: block;
+  border: 1px solid #666666;
+  padding: 6px 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+#cssmenu > ul > li > a:hover {
+  text-decoration: none;
+}
+#cssmenu > ul > li.active {
+  border-bottom: none;
+}
+#cssmenu > ul > li.active > a {
+  background: #97be10;
+  background: -moz-linear-gradient(goldenrod 0%, goldenrod 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, goldenrod), color-stop(100%, goldenrod));
+  background: -webkit-linear-gradient(goldenrod 0%, goldenrod 100%);
+  background: linear-gradient(goldenrod 0%, goldenrod 100%);
+  color: #fff;
+  text-shadow: 0 1px 1px #000;
+  /*border: 1px solid black;*/
+}
+#cssmenu > ul > li.active > a span {
+  /*border: 1px solid #97be10;*/
+}
+#cssmenu > ul > li.has-sub > a span {
+  background: url('../Images/icon_plus.png') 98% center no-repeat;
+}
+#cssmenu > ul > li.has-sub.active > a span {
+  background: url('../Images/icon_minus.png') 98% center no-repeat;
+}
+/* Sub menu */
+#cssmenu ul ul {
+  padding: 5px 12px;
+  display: none;
+}
+#cssmenu ul ul li {
+  padding: 3px 0;
+}
+#cssmenu ul ul a {
+  display: block;
+  color: #595959;
+  font-size: small;
+  font-weight: bold;
+}
+#cssmenu ul ul a:hover {
+  color: goldenrod;
+}
