--- a/DaemonCharacter/DaemonCharacter/Content/Site.css
+++ b/DaemonCharacter/DaemonCharacter/Content/Site.css
@@ -4,8 +4,8 @@
 }
 
 body {
-    background-image: url('../Images/dragon_2.jpg');
-    background-position:top right;
+    /*background-image: url('../Images/dragon_2.jpg');
+    background-position:left top*/
     background-repeat:no-repeat;
     background-color:#222;
     border-top: solid 10px #000;
@@ -13,7 +13,7 @@ body {
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     margin: 0;
-    padding: 0;
+    padding: 0; 
 }
 
 a {
@@ -105,15 +105,23 @@ h5, h6 {
 }
 
 #body {
-    background-color: rgba(253, 253, 253, 0.75);
-    clear: both;
+    /*background-color: rgba(253, 253, 253, 0.75);*/
+    background-color: rgba(255, 255, 255, 0.80);
     padding: 15px;
-    width: 95%;
     max-height: 100%;
-    margin-left: 1%;
-    margin-bottom:40px;
-    border-radius: 15px;
+    
+    margin:60px 20px 0 200px;
+    max-width:750px;
+    /*border-radius: 15px;*/
     border-color: AppWorkspace;
+    margin-bottom:50px;
+}
+
+
+#site-menu {
+    top:110px;
+    left:10px;
+    position:absolute;
 }
 
 header .content-wrapper {
@@ -171,6 +179,7 @@ footer {
             margin: 0;
             padding: 0;
             text-decoration: underline;
+            color:white;
         }
 
     #login ul {
@@ -355,7 +364,7 @@ input, textarea {
     border: 1px solid #e2e2e2;
     background: #fff;
     color: #333;
-    font-size: 1.2em;
+    font-size: small;
     margin: 5px 0 6px 0;
     padding: 5px;
     max-width: 300px;
@@ -363,7 +372,7 @@ input, textarea {
 
 textarea {
     font-family: inherit;
-    max-width: 500px;
+    max-width: 250px;
 }
 
     input:focus, textarea:focus {
@@ -382,7 +391,7 @@ button {
     background-color: #d3dce0;
     border: 1px solid #787878;
     cursor: pointer;
-    font-size: 1.2em;
+    font-size: small;
     font-weight: 600;
     padding: 7px;
     margin-right: 8px;
@@ -407,7 +416,7 @@ td button {
 .message-error {
     clear: both;
     color: #e80c4d;
-    font-size: 1.1em;
+    font-size: small;
     font-weight: bold;
     margin: 20px 0 10px 0;
 }
@@ -562,23 +571,6 @@ tr.pager td {
             #login a:hover {
                 color: #333;
             }
-
-    /* menu */
-    nav {
-        margin-bottom: 5px;
-    }
-
-    ul#menu {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-
-        ul#menu li {
-            margin: 0;
-            padding: 0;
-        }
-
 
     /* main layout
     ----------------------------------------------------------*/
