--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
@@ -1,34 +1,30 @@
-﻿<aside class="float-right" id="login">
-    @Html.Partial("_LoginPartial")
-</aside> 
-<nav>  
+<script type="text/javascript" src="@Url.Content("~/Scripts/Menu.js")"></script>
+
+<div id='cssmenu'>
     <ul>
-        <li class="sub">
-            @Html.ActionLink("Home", "Index", "Home")
-        </li>|
-        <li class="sub">
-            @Html.ActionLink("Attributes", "Index", "Attribute")
+        <li class='active'>
+            <a href="~/Home/"><span>Home</span></a></li>
+        <li class='has-sub'>
+            <a href="#"><span>Attributes</span></a>
             <ul>
-                <li>
-                    @Html.ActionLink("Create", "Create", "Attribute")
-                </li>
-                <li class="sub">
-                    @Html.ActionLink("Types", "Index", "AttributeType")
-                    <ul>
-                        <li>
-                            @Html.ActionLink("Create", "Create", "AttributeType")
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </li>|
-        <li class="sub">
-            @Html.ActionLink("Characters", "Index", "Character")
-            <ul>
-                <li>
-                    @Html.ActionLink("Create", "Create", "Character")
-                </li>
+                <li>@Html.ActionLink("List Attr", "Index", "Attribute")</li>
+                <li>@Html.ActionLink("Create", "Create", "Attribute")</li>
             </ul>
         </li>
+        <li class='has-sub'>
+            <a href="#"><span>Attribute Types</span></a>
+            <ul>
+                <li>@Html.ActionLink("List Types", "Index", "AttributeType")</li>
+                <li>@Html.ActionLink("Create", "Create", "AttributeType")</li>
+            </ul>
+        </li>
+        <li class='has-sub'>
+            <a href="#"><span>Characters</span></a>
+            <ul>
+                <li>@Html.ActionLink("List Chars", "Index", "Character")</li>
+                <li>@Html.ActionLink("Create", "Create", "Character")</li>
+            </ul>
+        </li>
+        @*<li class='last'><a href='#'><span>Contact</span></a></li>*@
     </ul>
-</nav>
+</div>
