--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Delete.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model DaemonCharacter.Models.AttributeClass
+@model DaemonCharacter.Models.AttributeModel
 
 @{
     ViewBag.Title = "Delete";
@@ -16,7 +16,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>AttributeClass</legend>
+    <legend>AttributeModel</legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.name)
