--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model DaemonCharacter.Models.AttributeClass
+@model DaemonCharacter.Models.AttributeModel
 
 @{
     ViewBag.Title = "Details";
@@ -15,7 +15,7 @@
 <h2>Details</h2>
 
 <fieldset>
-    <legend>AttributeClass</legend>
+    <legend>AttributeModel</legend>
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.name)
