--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model IEnumerable<DaemonCharacter.Models.AttributeClass>
+@model IEnumerable<DaemonCharacter.Models.AttributeModel>
 
 @{
     ViewBag.Title = "Index";
