--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/ListBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/ListBonus.cshtml
@@ -6,7 +6,8 @@
 }
 
 
-@model IEnumerable<DaemonCharacter.Models.AttributeClass>
+@model IEnumerable<DaemonCharacter.Models.AttributeModel>
+
 @{ 
     Layout = null;
 }
