--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithBonus.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Models.CharacterAttributeClass>
+﻿@model IEnumerable<DaemonCharacter.Models.CharacterAttributeModel>
 
 
 @{
@@ -24,10 +24,10 @@
 
         @foreach (var subitem in items.bonusValues)
                 {
-                    ViewBag.description = ViewBag.description + ((DaemonCharacter.Models.CharacterAttributeClass)subitem).attribute.name + ": "
-                        + ((DaemonCharacter.Models.CharacterAttributeClass)subitem).value.ToString()
+                    ViewBag.description = ViewBag.description + ((DaemonCharacter.Models.CharacterAttributeModel)subitem).attribute.name + ": "
+                        + ((DaemonCharacter.Models.CharacterAttributeModel)subitem).value.ToString()
                         + "\n";
-                    ViewBag.result = ViewBag.result + ((DaemonCharacter.Models.CharacterAttributeClass)subitem).value;
+                    ViewBag.result = ViewBag.result + ((DaemonCharacter.Models.CharacterAttributeModel)subitem).value;
                 }
 
         <input type="number" title="@ViewBag.description" class="dynamic-input-detail" id="BonusAttr_@Html.Raw(items.idAttribute)" readonly="readonly" value="@ViewBag.result" min="@ViewBag.result">
