--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithNoBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListCharacterWithNoBonus.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Models.CharacterAttributeClass>
+﻿@model IEnumerable<DaemonCharacter.Models.CharacterAttributeModel>
 
 @{
     ViewBag.type = string.Empty;
