--- a/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/CharacterAttribute/ListNonCharacter.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Models.AttributeClass>
+﻿@model IEnumerable<DaemonCharacter.Models.AttributeModel>
 
 
 <fieldset>
