--- a/DaemonCharacter/DaemonCharacter/Views/Character/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Details.cshtml
@@ -5,7 +5,7 @@
     </script>
 }
 
-@model DaemonCharacter.Models.CharacterClass
+@model DaemonCharacter.Models.CharacterModel
 
 @{
     ViewBag.Title = "Character Form";
