--- a/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Edit.cshtml
@@ -5,7 +5,7 @@
     </script>
 }
 
-@model DaemonCharacter.Models.CharacterClass
+@model DaemonCharacter.Models.CharacterModel
 
 @{
     ViewBag.Title = "Edit";
@@ -18,7 +18,7 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>CharacterClass</legend>
+        <legend>CharacterModel</legend>
 
         @Html.HiddenFor(model => model.idCharacter)
 
