--- a/DaemonCharacter/DaemonCharacter/Views/Character/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@model IEnumerable<DaemonCharacter.Models.CharacterClass>
+@model IEnumerable<DaemonCharacter.Models.CharacterModel>
 
 @{
     ViewBag.Title = "Index";
