--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
@@ -1,30 +1,50 @@
 <script type="text/javascript" src="@Url.Content("~/Scripts/Menu.js")"></script>
 
 <div id='cssmenu'>
-    <ul>
-        <li class='active'>
-            <a href="~/Home/"><span>Home</span></a></li>
-        <li class='has-sub'>
-            <a href="#"><span>Attributes</span></a>
-            <ul>
-                <li>@Html.ActionLink("List Attr", "Index", "Attribute")</li>
-                <li>@Html.ActionLink("Create", "Create", "Attribute")</li>
-            </ul>
-        </li>
-        <li class='has-sub'>
-            <a href="#"><span>Attribute Types</span></a>
-            <ul>
-                <li>@Html.ActionLink("List Types", "Index", "AttributeType")</li>
-                <li>@Html.ActionLink("Create", "Create", "AttributeType")</li>
-            </ul>
-        </li>
-        <li class='has-sub'>
-            <a href="#"><span>Characters</span></a>
-            <ul>
-                <li>@Html.ActionLink("List Chars", "Index", "Character")</li>
-                <li>@Html.ActionLink("Create", "Create", "Character")</li>
-            </ul>
-        </li>
-        @*<li class='last'><a href='#'><span>Contact</span></a></li>*@
-    </ul>
+    @if (Request.IsAuthenticated)
+    {
+
+        <ul>
+            <li class='active'>
+                <a href="~/Home/"><span>Home</span></a>
+            </li>
+            <li class='has-sub'>
+                <a href="#"><span>Attributes</span></a>
+                <ul>
+                    <li>@Html.ActionLink("List Attr", "Index", "Attribute")</li>
+                    <li>@Html.ActionLink("Create", "Create", "Attribute")</li>
+                </ul>
+            </li>
+            <li class='has-sub'>
+                <a href="#"><span>Attribute Types</span></a>
+                <ul>
+                    <li>@Html.ActionLink("List Types", "Index", "AttributeType")</li>
+                    <li>@Html.ActionLink("Create", "Create", "AttributeType")</li>
+                </ul>
+            </li>
+            <li class='has-sub'>
+                <a href="#"><span>Characters</span></a>
+                <ul>
+                    <li>@Html.ActionLink("List Chars", "Index", "Character")</li>
+                    <li>@Html.ActionLink("Create", "Create", "Character")</li>
+                </ul>
+            </li>
+            <li class='has-sub'>
+                <a href="#"><span>Campaigns</span></a>
+                <ul>
+                    <li>@Html.ActionLink("List Campaigns", "Index", "Campaign")</li>
+                    <li>@Html.ActionLink("Create", "Create", "Campaign")</li>
+                </ul>
+            </li>
+            @*<li class='last'><a href='#'><span>Contact</span></a></li>*@
+        </ul>
+    }
+    else
+    {
+        <ul>
+            <li class='active'>
+                <a href="~/Home/"><span>Home</span></a>
+            </li>
+        </ul>
+    }
 </div>
